--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');
+@font-face {
+    font-family: "Parkinsans";
+    src: url("/fonts/Parkinsans.woff2") format("woff2"); /* Adjust path and format as needed */
+    font-weight: 300 800;
+    font-style: normal;
+  }
+  
+  /* You can set it as the default font for the entire app */
+  body {
+    font-family: "Parkinsans", sans-serif;
+  }
